<resources>

    <string name="app_name">Blink</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Blink</string>
    <string name="Stop_Button">Start</string>
    <string name="manage_programms">Manage Programms</string>
    <string name="no_programms">No Programms</string>
    <string name="no_data">No Programm Data</string>
    <string name="add_programm">Add Programm</string>
    <string name="confirm">Confirm</string>
    <string name="intervall">Intervall</string>
    <string name="edit_programm">Edit Programm</string>
    <string name="add_intervall">Add Intervall</string>
    <string name="program_hint">Program Name</string>
    <string name="run">Time to Run</string>
    <string name="rest">Time to Rest</string>
    <string name="walk">Time to Walk</string>
    <string name="repeat">Number of Repeats</string>


</resources>