<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
    	android:layout_height="match_parent">
    
    <EditText
        android:id="@+id/programm_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:hint="@string/program_hint"
        android:inputType="text" />
        
     <EditText
        android:id="@+id/intervall1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/programm_name"
        android:hint="@string/run"
        android:inputType="numberDecimal"
        android:scrollbars="vertical" />

    <EditText android:id="@+id/intervall2" android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/intervall1"
        android:hint="@string/rest"
		android:inputType="numberDecimal"
		android:scrollbars="vertical" />
    
    <EditText android:id="@+id/intervall3" android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/intervall2"
        android:hint="@string/walk"
		android:inputType="numberDecimal"
		android:scrollbars="vertical" />
    
    <EditText android:id="@+id/intervall4" android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/intervall3"
        android:hint="@string/repeat"
		android:inputType="numberDecimal"
		android:scrollbars="vertical" />
    
    <Button
        android:id="@+id/accept_programm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/intervall4"
        android:onClick="OnClick"
        android:text="@string/confirm" />
</RelativeLayout>